--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Todolist</title>
 </head>
 <body>
-	<todolist></todolist>
+	<app></app>
 </body>
 </html>
